--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Disappearing Ninja and More!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
         $(document).ready(function(){
             $('img').click(function(){
                 $(this).css('visibility','hidden');
@@ -16,14 +16,14 @@
     </script>
 </head>
 <body>
-    <img src="img/tori-1976609_960_720 Cropped.jpg">
-    <img src="img/shuriken-153172_960_720 Cropped.png">
-    <img src="img/ninja-2108803_960_720 Cropped.png">
-    <img src="img/ninja-1297215_960_720 Cropped.png">
-    <img src="img/ninja-1027877_960_720 Cropped.jpg">
-    <img src="img/clouds-1841296_960_720 Cropped.jpg">
-    <img src="img/bridge-2250475_960_720 Cropped.jpg">
-    <img src="img/architecture-1578117_960_720 Cropped.jpg">
+    <img src="img/tori-1976609_960_720%20Cropped.jpg" alt="tori">
+    <img src="img/shuriken-153172_960_720%20Cropped.png" alt="shuriken">
+    <img src="img/ninja-2108803_960_720%20Cropped.png" alt="ninja1">
+    <img src="img/ninja-1297215_960_720%20Cropped.png" alt="ninja2">
+    <img src="img/ninja-1027877_960_720%20Cropped.jpg" alt="ninja3">
+    <img src="img/clouds-1841296_960_720%20Cropped.jpg" alt="clouds">
+    <img src="img/bridge-2250475_960_720%20Cropped.jpg" alt="bridge">
+    <img src="img/architecture-1578117_960_720%20Cropped.jpg" alt="architecture">
     <button>Reload</button>
 </body>
 </html>
